--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer base {
+  body {
+    @apply  dark:bg-bgDark bg-white dark:text-pink-100;
+  }
+  h2 {
+    @apply text-xl mx-3 text-red-600 dark:text-sky-500 font-primaryFont flex flex-row flex-wrap justify-center;
+  }
+}
+
+/* // export const lightHeaderStyle =
+//   "mx-3 text-primaryColor font-primaryFont flex flex-row flex-wrap justify-center";
+// export const darkHeaderStyle =
+//   "mx-3 text-sky-500 font-primaryFont flex flex-row flex-wrap justify-center"; */
+
+/* :root {
   --background-rgb: 255, 255, 255;
 }
 
@@ -16,8 +30,13 @@
 
 body {
   background: rgb(var(--background-rgb));
-}
+} */
 
-h2 {
+/* h2 {
   font-size: 20px;
-}
+} */
+
+
+/* className={`p-3 flex flex-col items-center ${
+  darkMode && "text-pink-100"
+}`} */
