--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply  dark:bg-bgDark bg-white dark:text-pink-100;
+    @apply  dark:bg-bgDark bg-white dark:text-gray-200;
   }
   h2 {
     @apply text-xl mx-3 text-red-600 dark:text-sky-500 font-primaryFont flex flex-row flex-wrap justify-center;
